3-app.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dpl-onlymaswahyu
  namespace: dev-onlymaswahyu
spec:
  selector:
    matchLabels:
      app: app-onlymaswahyu
  template:
    metadata:
      labels:
        app: app-onlymaswahyu
    spec:
      imagePullSecrets:
        - name: dockersecret
      containers:
        - name: app-onlymaswahyu
          image: registry-1.docker.io/bangdoni/php-docker:latest
          imagePullPolicy: Always
          resources:
            limits:
              memory: "64Mi"
              cpu: "20m"
            requests:
              memory: "32Mi"
              cpu: "10m"
          ports:
            - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: svc-onlymaswahyu
  namespace: dev-onlymaswahyu
spec:
  selector:
    app: app-onlymaswahyu
  ports:
    - port: 80 #port yang diakses user
      targetPort: 80 # port dari sisi container
